# whitebox

./: README.md  pyproject.toml
tests/: test_whitebox.py
tests/resources/: partially_wrong_student_code.py  student_code.py  teacher_code.py  teacher_test_operations.py  wrong_student_code.py
whitebox/: __init__.py  actions.py  whitebox.py
