[tool.poetry]
name = "whitebox"
version = "0.1.0"
description = ""
authors = ["Marcelo de Jesús Núñez <chelo154@gmail.com>"]
packages = [
    { include = "whitebox", from = "."},
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
